--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,21 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<nuxeo.version>6.0-HF32</nuxeo.version>
+		<nuxeo.version>6.0-HF30</nuxeo.version>
 		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
-
-		<opentoutatice.version>3.4.0-RC01</opentoutatice.version>
-		<ottc.es.version>1.2</ottc.es.version>
-		<ottc.collab.version>3.4.0-RC01</ottc.collab.version>
+		<opentoutatice.version>3.4.0-RC02</opentoutatice.version>
+		<ottc.es.version>1.3</ottc.es.version>
+		<ottc.collab.version>3.4.0-RC02</ottc.collab.version>
 		<ottc.filenaming.version>1.3</ottc.filenaming.version>
 		<ottc.wf.version>1.2</ottc.wf.version>
 		<ottc.notif.version>1.2.1</ottc.notif.version>
 		<ottc.ui.version>1.1</ottc.ui.version>
 		<ottc.drive.version>3.4.0-RC01</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
+
+		<ottc.es.custom.version>2.0-RC02</ottc.es.custom.version>
+		<ottc.procedure.version>1.0-RC04</ottc.procedure.version>
+
 	</properties>
 
 	<build>
@@ -169,6 +172,16 @@
 			<groupId>opentoutatice-ecm.generic-ui-service</groupId>
 			<artifactId>opentoutatice-generic-ui-service-ecm</artifactId>
 			<version>${ottc.generic-ui.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>opentoutatice-ecm.elasticsearch-customizer</groupId>
+			<artifactId>opentoutatice-addon-elasticsearch-customizer-ecm</artifactId>
+			<version>${ottc.es.custom.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>opentoutatice-ecm.procedures</groupId>
+		    <artifactId>opentoutatice-addon-procedures-ecm</artifactId>
+		    <version>${ottc.procedure.version}</version>
 		</dependency>
 
 		<!-- Agenda -->
