--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 		<ottc.es.custom.version>2.0-RC02</ottc.es.custom.version>
 		<ottc.procedure.version>1.0-RC04</ottc.procedure.version>
-
+		<ottc.checkin.version>3.4.0-RC01</ottc.checkin.version>
 	</properties>
 
 	<build>
@@ -113,6 +113,11 @@
 		<!-- OpenToutatice -->
 		<dependency>
 			<groupId>opentoutatice-ecm.platform</groupId>
+			<artifactId>opentoutatice-ecm-attached-files</artifactId>
+			<version>${opentoutatice.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>opentoutatice-ecm.platform</groupId>
 			<artifactId>opentoutatice-ecm-platform-automation</artifactId>
 			<version>${opentoutatice.version}</version>
 		</dependency>
@@ -182,6 +187,11 @@
 		    <groupId>opentoutatice-ecm.procedures</groupId>
 		    <artifactId>opentoutatice-addon-procedures-ecm</artifactId>
 		    <version>${ottc.procedure.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>opentoutatice-ecm.checkin</groupId>
+		    <artifactId>opentoutatice-addon-checkin-ecm</artifactId>
+		    <version>${ottc.checkin.version}</version>
 		</dependency>
 
 		<!-- Agenda -->
