--- a/pom.xml
+++ b/pom.xml
@@ -12,19 +12,21 @@
 	<properties>
 		<nuxeo.version>6.0-HF30</nuxeo.version>
 		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
-		<opentoutatice.version>3.4.0-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>3.4.0-RC05</opentoutatice.version>
 		<ottc.es.version>1.3</ottc.es.version>
 		<ottc.collab.version>3.4.0-RC03</ottc.collab.version>
-		<ottc.filenaming.version>1.4-SNAPSHOT</ottc.filenaming.version>
+		<ottc.filenaming.version>1.3</ottc.filenaming.version>
 		<ottc.wf.version>1.2</ottc.wf.version>
-		<ottc.notif.version>1.2-SNAPSHOT</ottc.notif.version>
-		<ottc.ui.version>2.0-SNAPSHOT</ottc.ui.version>
+		<ottc.notif.version>1.2.1</ottc.notif.version>
+		<ottc.ui.version>1.1</ottc.ui.version>
 		<ottc.drive.version>3.4.0-RC01</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>2.0-SNAPSHOT</ottc.es.custom.version>
-		<ottc.procedure.version>1.0-SNAPSHOT</ottc.procedure.version>
-		<ottc.checkin.version>3.4.0-SNAPSHOT</ottc.checkin.version>
+		<ottc.es.custom.version>2.0-RC02</ottc.es.custom.version>
+		<ottc.procedure.version>1.0-RC05</ottc.procedure.version>
+		<ottc.checkin.version>3.4.0-RC01</ottc.checkin.version>
+		
+		<ottc.monitoring.version>2.1</ottc.monitoring.version>
 	</properties>
 
 	<build>
@@ -193,6 +195,12 @@
 		    <artifactId>opentoutatice-addon-checkin-ecm</artifactId>
 		    <version>${ottc.checkin.version}</version>
 		</dependency>
+		<!-- Monitoring -->
+		<dependency>
+            <groupId>opentoutatice-ecm.monitoring</groupId>
+            <artifactId>opentoutatice-monitoring-ecm</artifactId>
+            <version>${ottc.monitoring.version}</version>
+        </dependency>
 
 		<!-- Agenda -->
 		<dependency>
@@ -368,7 +376,18 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.6.3</version>
 		</dependency>
-
+		
+		<!-- Depedencies for JavaMelody Monitoring -->
+		<dependency>
+            <groupId>net.bull.javamelody</groupId>
+            <artifactId>javamelody-core</artifactId>
+            <version>1.62.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jrobin</groupId>
+            <artifactId>jrobin</artifactId>
+            <version>1.5.9</version>
+        </dependency>
 
 	</dependencies>
 
