--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
 	<properties>
 		<nuxeo.version>6.0-HF30</nuxeo.version>
 		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
-		<opentoutatice.version>3.4.0-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>3.4.0-RC08</opentoutatice.version>
 		<ottc.es.version>1.3</ottc.es.version>
 		<ottc.collab.version>3.4.0-RC03</ottc.collab.version>
 		<ottc.filenaming.version>1.4-RC01</ottc.filenaming.version>
 		<ottc.wf.version>1.2</ottc.wf.version>
 		<ottc.notif.version>1.3-RC01</ottc.notif.version>
-		<ottc.ui.version>2.0-SNAPSHOT</ottc.ui.version>
+		<ottc.ui.version>2.0-RC05</ottc.ui.version>
 		<ottc.drive.version>3.4.0-RC01</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
 		<ottc.es.custom.version>2.0-RC03</ottc.es.custom.version>
 		<ottc.procedure.version>1.0-RC06</ottc.procedure.version>
-		<ottc.checkin.version>3.4.0-SNAPSHOT</ottc.checkin.version>
-		<ottc.pad.version>3.4.0-SNAPSHOT</ottc.pad.version>
+		<ottc.checkin.version>3.4.0-RC03</ottc.checkin.version>
+		<ottc.pad.version>3.4.0-RC01</ottc.pad.version>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>		
 	</properties>
