--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<properties>
 		<nuxeo.version>6.0-HF30</nuxeo.version>
 		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
-		<opentoutatice.version>3.4.0-RC09</opentoutatice.version>
+		<opentoutatice.version>3.4.0-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3</ottc.es.version>
-		<ottc.collab.version>3.4.0-RC03</ottc.collab.version>
+		<ottc.collab.version>3.4.0-SNAPSHOT</ottc.collab.version>
 		<ottc.filenaming.version>1.4-RC01</ottc.filenaming.version>
 		<ottc.wf.version>1.2</ottc.wf.version>
 		<ottc.notif.version>1.3-RC01</ottc.notif.version>
@@ -25,7 +25,7 @@
 		<ottc.es.custom.version>2.0-RC03</ottc.es.custom.version>
 		<ottc.procedure.version>1.0-RC06</ottc.procedure.version>
 		<ottc.checkin.version>3.4.0-RC04</ottc.checkin.version>
-		<ottc.pad.version>3.4.0-RC02</ottc.pad.version>
+		<ottc.pad.version>3.4.0-SNAPSHOT</ottc.pad.version>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>		
 	</properties>
