--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<nuxeo.version>6.0-HF30</nuxeo.version>
+		<nuxeo.version>6.0-HF34</nuxeo.version>
 		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
 		<opentoutatice.version>3.4.0-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3</ottc.es.version>
@@ -24,7 +24,7 @@
 
 		<ottc.es.custom.version>2.0-RC03</ottc.es.custom.version>
 		<ottc.procedure.version>1.0-RC06</ottc.procedure.version>
-		<ottc.checkin.version>3.4.0-RC04</ottc.checkin.version>
+		<ottc.checkin.version>3.4.0-SNAPSHOT</ottc.checkin.version>
 		<ottc.pad.version>3.4.0-SNAPSHOT</ottc.pad.version>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>		
