--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<nuxeo.version>6.0-HF34</nuxeo.version>
-		<nuxeodrive.version>6.0-HF08</nuxeodrive.version>
+		<nuxeodrive.version>6.0-HF34</nuxeodrive.version>
 		<opentoutatice.version>3.4.0-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1-RC01</ottc.es.version>
 		<ottc.collab.version>3.4.0-RC04</ottc.collab.version>
@@ -19,7 +19,7 @@
 		<ottc.wf.version>2.0</ottc.wf.version>
 		<ottc.notif.version>1.3-RC01</ottc.notif.version>
 		<ottc.ui.version>2.0-RC05</ottc.ui.version>
-		<ottc.drive.version>3.4.0-RC01</ottc.drive.version>
+		<ottc.drive.version>3.4.0-SNAPSHOT</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
 		<ottc.es.custom.version>2.0-RC03</ottc.es.custom.version>
