--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<nuxeo.version>6.0-HF34</nuxeo.version>
 		<nuxeodrive.version>6.0-HF34</nuxeodrive.version>
-		<opentoutatice.version>3.4.3-RC01</opentoutatice.version>
+		<opentoutatice.version>3.4.3-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1-RC01</ottc.es.version>
 		<ottc.collab.version>3.4.0</ottc.collab.version>
 		<ottc.filenaming.version>1.4-RC02</ottc.filenaming.version>
@@ -24,7 +24,7 @@
 
 		<ottc.es.custom.version>2.0-RC03</ottc.es.custom.version>
 		<ottc.procedure.version>1.0-RC08</ottc.procedure.version>
-		<ottc.checkin.version>3.4.1</ottc.checkin.version> 
+		<ottc.checkin.version>3.4.2-SNAPSHOT</ottc.checkin.version> 
 		<ottc.pad.version>3.4.0-RC03</ottc.pad.version>
 		<ottc.news.version>1.0-RC02</ottc.news.version>
 		
