--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<nuxeodrive.version>6.0-HF34</nuxeodrive.version>
 		<opentoutatice.version>3.4.3-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
-		<ottc.collab.version>3.4.0</ottc.collab.version>
+		<ottc.collab.version>3.4-SNAPSHOT</ottc.collab.version>
 		<ottc.filenaming.version>1.4-RC02</ottc.filenaming.version>
 		<ottc.file.versioning.version>1.0-SNAPSHOT</ottc.file.versioning.version>
 		<ottc.wf.version>2.0</ottc.wf.version>
