--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,21 @@
 	<properties>
 		<nuxeo.version>6.0-HF34</nuxeo.version>
 		<nuxeodrive.version>6.0-HF34</nuxeodrive.version>
-		<opentoutatice.version>3.4.3-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>3.4.3</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
-		<ottc.collab.version>3.4-SNAPSHOT</ottc.collab.version>
-		<ottc.filenaming.version>1.4-RC02</ottc.filenaming.version>
-		<ottc.file.versioning.version>1.0-SNAPSHOT</ottc.file.versioning.version>
+		<ottc.collab.version>3.4.1</ottc.collab.version>
+		<ottc.filenaming.version>1.4</ottc.filenaming.version>
+		<ottc.file.versioning.version>1.0</ottc.file.versioning.version>
 		<ottc.wf.version>2.0</ottc.wf.version>
-		<ottc.notif.version>1.3-RC01</ottc.notif.version>
+		<ottc.notif.version>1.3</ottc.notif.version>
 		<ottc.ui.version>2.0</ottc.ui.version>
-		<ottc.drive.version>3.5.0-RC01</ottc.drive.version>
+		<ottc.drive.version>3.5.0</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>2.0-SNAPSHOT</ottc.es.custom.version>
-		<ottc.procedure.version>3.4.1-SNAPSHOT</ottc.procedure.version>
-		<ottc.checkin.version>3.4.2-SNAPSHOT</ottc.checkin.version> 
-		<ottc.pad.version>3.4.0-RC03</ottc.pad.version>
+		<ottc.es.custom.version>2.0</ottc.es.custom.version>
+		<ottc.procedure.version>1.0</ottc.procedure.version>
+		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
+		<ottc.pad.version>3.4.0</ottc.pad.version>
 		<ottc.news.version>1.0-RC02</ottc.news.version>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>	
