--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>opentoutatice-ecm.distribtion</groupId>
 	<artifactId>ottc-collab-nx-distrib</artifactId>
-	<version>4.6-SNAPSHOT</version>
+	<version>4.4-SNAPSHOT</version>
 	<name>Open toutatice + collab modules nuxeo distribution</name>
 	<packaging>pom</packaging>
 
@@ -20,7 +20,7 @@
 		<ottc.wf.version>2.0</ottc.wf.version>
 		<ottc.notif.version>1.3</ottc.notif.version>
 		<ottc.ui.version>2.0</ottc.ui.version>
-		<ottc.drive.version>3.5.0</ottc.drive.version>
+		<ottc.drive.version>4.4-SNAPSHOT</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
 		<ottc.es.custom.version>2.0</ottc.es.custom.version>
@@ -458,7 +458,7 @@
 	</dependencies>
 
     <scm>
-        <developerConnection>scm:svn:http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/trunk</developerConnection>
+        <developerConnection>scm:svn:http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/branches/4.4-maintenance</developerConnection>
     </scm>
     
     
