--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<ottc.wf.version>2.0</ottc.wf.version>
 		<ottc.notif.version>1.3</ottc.notif.version>
 		<ottc.ui.version>2.0</ottc.ui.version>
-		<ottc.drive.version>4.4-SNAPSHOT</ottc.drive.version>
+		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
 		<ottc.es.custom.version>2.0</ottc.es.custom.version>
