--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 	<properties>
 		<nuxeo.version>6.0-HF37</nuxeo.version>
 		<nuxeodrive.version>6.0-HF37</nuxeodrive.version>
-		<opentoutatice.version>3.4-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>3.4.4</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
-		<ottc.collab.version>3.4-SNAPSHOT</ottc.collab.version>
+		<ottc.collab.version>3.4.2</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>1.0</ottc.file.versioning.version>
-		<ottc.wf.version>2.1-SNAPSHOT</ottc.wf.version>
+		<ottc.wf.version>2.1</ottc.wf.version>
 		<ottc.notif.version>1.3</ottc.notif.version>
-		<ottc.ui.version>2.1-SNAPSHOT</ottc.ui.version>
+		<ottc.ui.version>2.1</ottc.ui.version>
 		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
@@ -29,7 +29,7 @@
 		<ottc.pad.version>3.4.0</ottc.pad.version>
 		<ottc.news.version>1.0</ottc.news.version>
 		
-		<foad.custom.nx>4.4-SNAPSHOT</foad.custom.nx>
+		<foad.custom.nx>4.4.0</foad.custom.nx>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>	
 		
