--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>1.0</ottc.file.versioning.version>
 		<ottc.wf.version>2.2-SNAPSHOT</ottc.wf.version>
-		<ottc.notif.version>1.3</ottc.notif.version>
+		<ottc.notif.version>4.4-SNAPSHOT</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
 		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
@@ -27,7 +27,7 @@
 		<ottc.procedure.version>1.0</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>3.4.0</ottc.pad.version>
-		<ottc.news.version>4.4-SNAPSHOT</ottc.news.version>
+		<ottc.news.version>1.0</ottc.news.version>
 		
 		<foad.custom.nx>4.4.0</foad.custom.nx>
 		
