--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<nuxeo.version>6.0-HF37</nuxeo.version>
 		<nuxeodrive.version>6.0-HF37</nuxeodrive.version>
-		<opentoutatice.version>4.4.1</opentoutatice.version>
+		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>3.4.3</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
