Update build (ajout custom FOAD)

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<ottc.pad.version>3.4.0</ottc.pad.version>
 		<ottc.news.version>4.4-SNAPSHOT</ottc.news.version>
 		
-		<foad.custom.nx>4.4.1</foad.custom.nx>
+		<foad.custom.nx>4.4-SNAPSHOT</foad.custom.nx>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>	
 		
