--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 	<properties>
 		<nuxeo.version>6.0-HF37</nuxeo.version>
 		<nuxeodrive.version>6.0-HF37</nuxeodrive.version>
-		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>4.4.2</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>3.4.3</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>1.0</ottc.file.versioning.version>
 		<ottc.wf.version>2.1.1</ottc.wf.version>
-		<ottc.notif.version>4.4-SNAPSHOT</ottc.notif.version>
+		<ottc.notif.version>4.4.1</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
 		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
@@ -27,9 +27,9 @@
 		<ottc.procedure.version>1.0</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>3.4.0</ottc.pad.version>
-		<ottc.news.version>4.4-SNAPSHOT</ottc.news.version>
+		<ottc.news.version>1.0</ottc.news.version>
 		
-		<foad.custom.nx>4.4-SNAPSHOT</foad.custom.nx>
+		<foad.custom.nx>4.4.2</foad.custom.nx>
 		
 		<ottc.monitoring.version>2.1</ottc.monitoring.version>	
 		
