--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 	<properties>
 		<nuxeo.version>6.0-HF37</nuxeo.version>
 		<nuxeodrive.version>6.0-HF37</nuxeodrive.version>
+		
+		<nuxeoquota.version>6.0-HF37</nuxeoquota.version>
+		
 		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4</ottc.collab.version>
@@ -415,6 +418,23 @@
 		    <groupId>org.nuxeo.ecm.webengine</groupId>
 			<artifactId>nuxeo-webengine-ui</artifactId>
 			<version>${nuxeo.version}</version>
+		</dependency>
+		
+		<!-- Quota -->
+		<dependency>
+			<groupId>org.nuxeo.ecm.platform</groupId>
+  			<artifactId>nuxeo-quota-automation</artifactId>
+			<version>${nuxeoquota.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nuxeo.ecm.platform</groupId>
+  			<artifactId>nuxeo-quota-core</artifactId>
+			<version>${nuxeoquota.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nuxeo.ecm.platform</groupId>
+  			<artifactId>nuxeo-quota-web</artifactId>
+			<version>${nuxeoquota.version}</version>
 		</dependency>
 
 
