--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		
 		<nuxeoquota.version>6.0-HF37</nuxeoquota.version>
 		
-		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>4.4.3-RC1</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
@@ -31,8 +31,8 @@
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>3.4.0</ottc.pad.version>
 		<ottc.news.version>4.4</ottc.news.version>
-		<ottc.jwt.version>1.0.0-SNAPSHOT</ottc.jwt.version>
-		<ottc.onlyoffice.version>1.0.0-SNAPSHOT</ottc.onlyoffice.version>
+		<ottc.jwt.version>4.4-RC1</ottc.jwt.version>
+		<ottc.onlyoffice.version>4.4-RC1</ottc.onlyoffice.version>
 		
 		<foad.custom.nx>4.4.2</foad.custom.nx>
 		
