--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
-		<ottc.file.versioning.version>1.0</ottc.file.versioning.version>
+		<ottc.file.versioning.version>4.4-SNAPSHOT</ottc.file.versioning.version>
 		<ottc.wf.version>2.1.1</ottc.wf.version>
 		<ottc.notif.version>4.4.1</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
