--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 		<nuxeo.version>6.0-HF44</nuxeo.version>
 		<nuxeodrive.version>6.0-HF44</nuxeodrive.version>
 		
-		<opentoutatice.version>4.4.3-RC2</opentoutatice.version>
+		<opentoutatice.version>4.4.12-RC5</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
-		<ottc.file.versioning.version>4.4-SNAPSHOT</ottc.file.versioning.version>
+		<ottc.file.versioning.version>4.4.12-RC5</ottc.file.versioning.version>
 		<ottc.wf.version>2.1.1</ottc.wf.version>
 		<ottc.notif.version>4.4.1</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
@@ -27,7 +27,7 @@
 		<ottc.es.custom.version>2.0</ottc.es.custom.version>
 		<ottc.procedure.version>1.0</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
-		<ottc.pad.version>3.4.0</ottc.pad.version>
+		<ottc.pad.version>4.4.12-RC5</ottc.pad.version>
 		<ottc.news.version>4.4</ottc.news.version>
 		<ottc.jwt.version>4.4-RC1</ottc.jwt.version>
 		<ottc.onlyoffice.version>4.4-RC5</ottc.onlyoffice.version>
