--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		
 		<opentoutatice.version>4.4.12-RC5</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
-		<ottc.collab.version>4.4</ottc.collab.version>
+		<ottc.collab.version>4.4-SNAPSHOT</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.4.12-RC5</ottc.file.versioning.version>
 		<ottc.wf.version>2.1.1</ottc.wf.version>
