--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<ottc.collab.version>4.4.12</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.4.12</ottc.file.versioning.version>
-		<ottc.wf.version>2.1.1</ottc.wf.version>
+		<ottc.wf.version>4.4-SNAPSHOT</ottc.wf.version>
 		<ottc.notif.version>4.4.12.2</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
 		<ottc.drive.version>4.4</ottc.drive.version>
