--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 		<nuxeo.version>6.0-HF44</nuxeo.version>
 		<nuxeodrive.version>6.0-HF44</nuxeodrive.version>
 		
-		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
+		<opentoutatice.version>4.4.12.3</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4.12</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.4.12</ottc.file.versioning.version>
-		<ottc.wf.version>4.4-SNAPSHOT</ottc.wf.version>
+		<ottc.wf.version>4.4.12.2</ottc.wf.version>
 		<ottc.notif.version>4.4.12.2</ottc.notif.version>
 		<ottc.ui.version>2.1</ottc.ui.version>
 		<ottc.drive.version>4.4</ottc.drive.version>
