--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<nuxeo.version>6.0-HF44</nuxeo.version>
 		<nuxeodrive.version>6.0-HF44</nuxeodrive.version>
 		
-		<opentoutatice.version>4.4.12.5</opentoutatice.version>
+		<opentoutatice.version>4.4-SNAPSHOT</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
 		<ottc.collab.version>4.4.12.5</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
