--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<ottc.procedure.version>4.4.12.4</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>4.4.12</ottc.pad.version>
-		<ottc.news.version>4.4</ottc.news.version>
+		<ottc.news.version>4.4.13.3</ottc.news.version>
 		<ottc.jwt.version>4.4.12</ottc.jwt.version>
 		<ottc.onlyoffice.version>4.4.12</ottc.onlyoffice.version>
 		
@@ -110,12 +110,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.2.1</version>
-				<configuration>
-					<tagBase>http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/tags</tagBase>
-					<releaseProfiles>unpack,pack</releaseProfiles>
-					<preparationGoals>clean install</preparationGoals>
-					<goals>deploy</goals>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -506,8 +500,11 @@
 	</dependencies>
 
     <scm>
-        <developerConnection>scm:svn:http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/branches/4.4-maintenance</developerConnection>
-    </scm>
+		<url>https://github.com/osivia/nuxeo-collab-distrib</url>
+		<connection>scm:git:ssh://git@github.com/osivia/nuxeo-collab-distrib.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/osivia/nuxeo-collab-distrib.git</developerConnection>     
+		<tag>HEAD</tag> 
+	</scm>
     
     
     <distributionManagement>
