Correction des métadonnées de release.

--- a/pom.xml
+++ b/pom.xml
@@ -106,10 +106,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.2.1</version>
 				<configuration>
-					<tagBase>http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/tags</tagBase>
 					<releaseProfiles>unpack,pack</releaseProfiles>
-					<preparationGoals>clean install</preparationGoals>
-					<goals>deploy</goals>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -457,8 +454,12 @@
 		
 	</dependencies>
 
+
     <scm>
-        <developerConnection>scm:svn:http://www.osivia.org/repos/osivia-services/nx-distributions/ottc-collab/trunk</developerConnection>
+        <url>https://github.com/osivia/nuxeo-collab-distrib.git</url>
+        <connection>scm:git:ssh://git@github.com/osivia/nuxeo-collab-distrib.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/osivia/nuxeo-collab-distrib.git</developerConnection>     
+        <tag>HEAD</tag>
     </scm>
     
     
