Dev for denormalization

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>2.0</ottc.es.custom.version>
+		<ottc.es.custom.version>4.4-SNAPSHOT</ottc.es.custom.version>
 		<ottc.procedure.version>4.4.12.4</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>4.4.12</ottc.pad.version>
