--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 		<nuxeo.version>6.0-HF44</nuxeo.version>
 		<nuxeodrive.version>6.0-HF44</nuxeodrive.version>
 		
-		<opentoutatice.version>4.4.15.5</opentoutatice.version>
+		<opentoutatice.version>4.4.16</opentoutatice.version>
 		<ottc.es.version>1.3.1</ottc.es.version>
-		<ottc.collab.version>4.4-SNAPSHOT</ottc.collab.version>
+		<ottc.collab.version>4.4.16</ottc.collab.version>
 		<ottc.filenaming.version>1.4</ottc.filenaming.version>
 		<ottc.file.versioning.version>4.4.12</ottc.file.versioning.version>
 		<ottc.wf.version>4.4.12.2</ottc.wf.version>
@@ -24,7 +24,7 @@
 		<ottc.drive.version>4.4</ottc.drive.version>
 		<ottc.generic-ui.version>3.1.1</ottc.generic-ui.version>
 
-		<ottc.es.custom.version>4.4-SNAPSHOT</ottc.es.custom.version>
+		<ottc.es.custom.version>4.4.16</ottc.es.custom.version>
 		<ottc.procedure.version>4.4.12.4</ottc.procedure.version>
 		<ottc.checkin.version>3.4.2</ottc.checkin.version> 
 		<ottc.pad.version>4.4.12</ottc.pad.version>
